--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,19 @@
 .circlePath {
-  mix-blend-mode: screen;
+  mix-blend-mode: multiply;
 }
 
+.rotate {
+  animation: rotation 8s infinite linear;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
 
 
 .hidden {
@@ -15,15 +27,10 @@
   grid-template-columns: 25rem 35rem;  
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
-.poster {  
 
-  display: grid;
-  place-content: center;
-  width: 20rem;
-
-}
 
 .grid {
   isolation: isolate;
@@ -31,9 +38,8 @@
   padding: 1rem;
 }
 
-.form {
-  background-color: white;
-  border: black solid 0.2rem;
-  width: 20rem;
+.title {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
-
