--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.circlePath {
-  mix-blend-mode: multiply;
-}
-
-.rotate {
-  animation: rotation 8s infinite linear;
-}
 
 @keyframes rotation {
   from {
@@ -15,11 +8,9 @@
   }
 }
 
-
 .hidden {
   display: none;
 }
-
 
 .container {
   width: 60rem;
@@ -30,16 +21,24 @@
   align-items: center;
 }
 
-
-
-.grid {
-  isolation: isolate;
-  width: 25rem;
-  padding: 1rem;
-}
-
 .title {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 2rem;
+}
+
+.download {
+  height: 2rem;
+  width: 8rem;
+  background-color: white;
+  border: black solid 0.1rem;
+  margin: auto;
+  margin-top: 1rem;
+  display: grid;
+  place-content: center;
+}
+
+.download:hover {
+  background-color: black;
+  color: white;
 }
