--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -18,6 +18,12 @@
 
 }
 
+.toggle:hover {
+  color: white;
+  background-color: black;
+}
+
+
 .colors {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
